--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "@nivo/calendar": "^0.69.0",
     "@nivo/core": "^0.69.0",
     "@nivo/pie": "^0.69.0",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "date-fns": "^2.21.1",
+    "date-fns": "^2.22.1",
     "material-ui-dropzone": "^3.5.0",
-    "notistack": "^1.0.6",
+    "node-mailjet": "^3.3.4",
+    "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^2.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-spring": "^9.1.2",
-    "web-vitals": "^1.1.1"
+    "react-spring": "^9.2.1",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
