--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nivo/bar": "^0.70.1",
     "@nivo/calendar": "^0.69.0",
     "@nivo/core": "^0.69.0",
+    "@nivo/line": "^0.70.1",
     "@nivo/pie": "^0.69.0",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
